cmake_minimum_required(VERSION 3.14)
project(X)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif ()

if (WIN32)
    set(PLATFORM_WIN32 TRUE)
    set(D3D11_SUPPORTED TRUE)
    set(D3D12_SUPPORTED TRUE)
    set(VULKAN_SUPPORTED TRUE)
elseif (APPLE)
    set(PLATFORM_MACOS TRUE)
    set(METAL_SUPPORTED TRUE)
    set(VULKAN_SUPPORTED TRUE)
elseif (UNIX)
    set(PLATFORM_LINUX TRUE)
    set(VULKAN_SUPPORTED TRUE)
    set(GL_SUPPORTED TRUE)
endif ()

set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS ON)

include(FetchContent)
include(${CMAKE_SOURCE_DIR}/Config/FetchDeps.cmake)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(CODE_ROOT ${CMAKE_SOURCE_DIR}/Code)
set(ENGINE_DIR ${CODE_ROOT}/Engine)
set(SANDBOX_DIR ${CODE_ROOT}/Sandbox)

add_subdirectory(${ENGINE_DIR})
add_subdirectory(${SANDBOX_DIR})